@@ -1,3 +1,6 @@
+03. Aug 2012 Christoph Thielecke <crissi99@gmx.de>
+	- crash at search on duplicates fixed
+
 01. Aug 2012 Christoph Thielecke <crissi99@gmx.de>
 	- adding history entry on save as fixed
 	- version increased to 2.1
